// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/CircularProgress Animation 1`] = `
<div>
  <div
    aria-busy="true"
    aria-label="Loading"
    className="psds-circularprogress--size-medium"
    role="progressbar"
  >
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "color": "rgba(255, 255, 255, 0.95)",
      }
    }
  >
    Value: 
    0
  </div>
</div>
`;

exports[`Storyshots Components/CircularProgress Style Override 1`] = `
<div
  aria-busy="true"
  aria-label="Loading"
  className="psds-circularprogress--size-medium"
  role="progressbar"
  style={
    Object {
      "outline": "1px solid red",
    }
  }
>
  <svg
    className="psds-circularprogress__svg psds-circularprogress__svg--no-value"
    version="1.1"
    viewBox="0 0 48 48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      className="psds-circularprogress__bg psds-theme--dark"
      cx="24"
      cy="24"
      r={22}
    />
    <circle
      className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
      cx="24"
      cy="24"
      r={22}
      strokeDasharray="138.23007675795088 138.23007675795088"
      strokeDashoffset={103.67255756846316}
    />
  </svg>
</div>
`;

exports[`Storyshots Components/CircularProgress Values And Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr 1fr",
      "justifyItems": "left",
    }
  }
>
  <div>
    0
  </div>
  <div
    aria-busy="true"
    aria-label="Loading"
    className="psds-circularprogress--size-small"
    role="progressbar"
  >
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="Loading"
    className="psds-circularprogress--size-medium"
    role="progressbar"
  >
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
  <div>
    25
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={25}
    className="psds-circularprogress--size-small"
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      25%
    </div>
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={25}
    className="psds-circularprogress--size-medium"
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      25%
    </div>
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
  <div>
    33
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="psds-circularprogress--size-small"
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      33%
    </div>
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={92.6141514278271}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="psds-circularprogress--size-medium"
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      33%
    </div>
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={92.6141514278271}
      />
    </svg>
  </div>
  <div>
    50
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    className="psds-circularprogress--size-small"
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      50%
    </div>
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={69.11503837897544}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    className="psds-circularprogress--size-medium"
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      50%
    </div>
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={69.11503837897544}
      />
    </svg>
  </div>
  <div>
    66
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={66}
    className="psds-circularprogress--size-small"
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      66%
    </div>
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={46.9982260977033}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={66}
    className="psds-circularprogress--size-medium"
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      66%
    </div>
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={46.9982260977033}
      />
    </svg>
  </div>
  <div>
    75
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={75}
    className="psds-circularprogress--size-small"
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      75%
    </div>
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={34.55751918948772}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={75}
    className="psds-circularprogress--size-medium"
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      75%
    </div>
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={34.55751918948772}
      />
    </svg>
  </div>
  <div>
    100
  </div>
  <div
    aria-busy="false"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="psds-circularprogress--size-small"
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      complete
    </div>
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={0}
      />
    </svg>
  </div>
  <div
    aria-busy="false"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="psds-circularprogress--size-medium"
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      complete
    </div>
    <svg
      className="psds-circularprogress__svg"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={0}
      />
    </svg>
  </div>
  <div>
    Indeterminate
  </div>
  <div
    aria-busy="true"
    aria-label="Loading"
    className="psds-circularprogress--size-small"
    role="progressbar"
  >
    <svg
      className="psds-circularprogress__svg psds-circularprogress__svg--no-value"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="Loading"
    className="psds-circularprogress--size-medium"
    role="progressbar"
  >
    <svg
      className="psds-circularprogress__svg psds-circularprogress__svg--no-value"
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="psds-circularprogress__bg psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
      />
      <circle
        className="psds-circularprogress__fg psds-circularprogress__fg.psds-theme--dark"
        cx="24"
        cy="24"
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
</div>
`;
